<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleMapsTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_vista">Cambiar vista</string>
    <string name="menu_mover">Mover mapa</string>
    <string name="menu_animar">Animar mapa</string>
    <string name="menu_3d">Mapa 3d</string>
    <string name="menu_position">Posicion</string>
    <string name="search">Buscar</string>
    <string name="google_voice">Voice mic</string>

</resources>
