<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_buscar"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    
    <item 
        android:id="@+id/action_cambiar_vista"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_vista"/>
    
    <item
        android:id="@+id/action_mover_vista"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_mover"/>

    <item 
        android:id="@+id/action_animar_mapa"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_animar"/>
    <item 
        android:id="@+id/action_ver_3d"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_3d"/>
    <item 
        android:id="@+id/action_position"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_position"/>
    
    <item 
        android:id="@+id/action_voice"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/google_voice"/>
    <group android:id="@+id/group1"></group>
    
</menu>
